--- a/Message-app/package.json
+++ b/Message-app/package.json
@@ -58,7 +58,10 @@
     "@feathersjs/socketio": "^5.0.29",
     "@feathersjs/transport-commons": "^5.0.29",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "mongodb": "^6.8.0",
+    "react": "^18.3.1",
     "winston": "^3.14.2"
   },
   "devDependencies": {
